# snnfw

./: .gitignore  ARCHITECTURE.md  BRANCH_README.md  BRANCH_STATUS.md  CHANGELOG.md  CMakeLists.txt  CONFIGURATION_REFACTORING_SUMMARY.md  DATASTORE_ARCHITECTURE.md  EXPERIMENT_MANAGEMENT.md  EXPERIMENT_STATUS.md  FEATURE_SUMMARY.md  FINAL_OPTIMIZATION_REPORT.md  FRAMEWORK_ROBUSTNESS_ANALYSIS.md  GITHUB_DEPLOYMENT.md  HIERARCHICAL_STRUCTURE.md  ID_RANGE_SCALE.md  INSTALL_ROCKSDB.md  LOGGING_IMPLEMENTATION.md  MNIST_DEBUG_RESULTS.md  MNIST_EXPERIMENTS.md  MNIST_FULL_TEST_RESULTS.md  MNIST_IMPROVEMENT_OPTIONS.md  MNIST_LEARNING_SUMMARY.md  MNIST_PROGRESS_SUMMARY.md  MNIST_V1_MULTICOLUMN.md  MULTITHREADING_SUMMARY.md  NEURAL_CONNECTIVITY.md  NEURAL_INFRASTRUCTURE.md  NEURAL_OBJECT_FACTORY.md  OPTIMIZATION_STATUS.md  README.md  REALTIME_FEATURE_SUMMARY.md  REALTIME_SYNCHRONIZATION.md  TEST_RESULTS.md  THREADING.md  benchmark_threads.sh  optimization_analysis.txt  optimization_study_saccades.pkl  optimization_study_saccades_focused.pkl  run_visualization_demo.sh
configs/: README.md  emnist_letters_24col.json  emnist_letters_8col_minimal.json  emnist_letters_optimized.json  emnist_letters_param_space.json  emnist_letters_param_space_small.json  emnist_letters_saccades.json  emnist_letters_saccades_best.json  emnist_letters_saccades_best_v2.json  emnist_letters_saccades_debug.json  emnist_letters_saccades_opt.json  emnist_letters_saccades_opt2.json  emnist_letters_saccades_position.json  emnist_letters_saccades_test.json  emnist_letters_v1.json  mnist_8x8_majority.json  mnist_8x8_optimized.json  mnist_8x8_weighted_distance.json  mnist_8x8_weighted_similarity.json  mnist_config.json  mnist_config_5x5.json  mnist_config_fast.json  mnist_config_k10.json  mnist_config_k3.json  mnist_config_no_sonata.json  mnist_config_with_adapters.json  mnist_config_with_display.json  mnist_gabor_population.json  mnist_gabor_rate.json  mnist_gabor_rate_5x5.json  mnist_gabor_temporal.json  mnist_gabor_temporal_5x5.json  mnist_learning_append.json  mnist_learning_hybrid.json  mnist_learning_merge_similar.json  mnist_learning_replace_worst.json  mnist_network.h5  mnist_network_5x5.h5  mnist_network_9x9.h5  mnist_optimization_config.json  (+18 more)
docs/: ADAPTER_IMPLEMENTATION_SUMMARY.md  ADAPTER_SYSTEM.md  ADAPTER_SYSTEM_SUMMARY.md  API_NETWORK_CONSTRUCTION.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SYSTEM.md  Diag1.md  Diag2.md  Diag3.md  ENHANCED_OPTIMIZER_PROGRESS.md  FRAMEWORK_COMPLETION_SUMMARY.md  HYPERPARAMETER_OPTIMIZATION.md  HYPERPARAMETER_OPTIMIZATION_SUMMARY.md  KT_MNIST_V1_MultiColumn_Optimization.md  LEARNING_STRATEGIES.md  NEUROML_HDF5_IMPORT_GUIDE.md  OPTIMIZATION_ROADMAP.md  POSITION_STORAGE_AND_IMPORT.md  QUICK_REFERENCE.md  VISUALIZATION_DESIGN.md  VISUALIZATION_IMPLEMENTATION_STATUS.md  VISUALIZATION_PHASE1_COMPLETE.md  VISUALIZATION_PHASE1_SPEC.md  VISUALIZATION_PHASE2_COMPLETE.md  VISUALIZATION_PHASE2_DESIGN.md  VISUALIZATION_PHASE3_COMPLETE.md  VISUALIZATION_PHASE3_DESIGN.md  VISUALIZATION_PHASE4_DESIGN.md  VISUALIZATION_PHASE4_PROGRESS.md  VISUALIZATION_QUICK_START.md  VISUALIZATION_TECHNIQUES_COMPARISON.md
examples/: activity_demo.cpp  cluster_example.cpp  custom_adapter.cpp  datastore_example.cpp  display_visualization.cpp  experiment_config_example.cpp  factory_example.cpp  hierarchical_structure_example.cpp  logging_example.cpp  main.cpp  network_visualization_demo.cpp  neural_network_example.cpp  neuroml_hdf5_import_example.cpp  position_import_example.cpp  realtime_spike_example.cpp  retina_mnist.cpp  threading_example.cpp  visualization_demo.cpp
experiments/: debug_gabor.cpp  emnist_letters_optimize.cpp  emnist_letters_v1.cpp  mnist_activation_matching.cpp  mnist_classification_strategies.cpp  mnist_debug_learning.cpp  mnist_debug_retina.cpp  mnist_edge_features.cpp  mnist_full_test.cpp  mnist_fuzzy_test.cpp  mnist_hyperparameter_optimization.cpp  mnist_hyperparameter_search.cpp  mnist_learning.cpp  mnist_learning_strategies.cpp  mnist_optimized.cpp  mnist_orientation_columns.cpp  mnist_pattern_diversity.cpp  mnist_simple_test.cpp  mnist_spatial_sdr.cpp  mnist_two_layer.cpp  mnist_v1_24col.cpp  mnist_v1_32col.cpp  mnist_v1_hierarchical.cpp  mnist_v1_multicolumn.cpp  mnist_v1_optimized.cpp  mnist_visualize_patterns.cpp  mnist_with_adapters.cpp  test_emnist_loader.cpp  test_saccades_debug.cpp
optimization_results/: optimization_results.json  optimizer_state.json  trial_13_config.json  trial_15_config.json  trial_16_config.json  trial_17_config.json  trial_18_config.json  trial_19_config.json  trial_1_config.json  trial_20_config.json  trial_21_config.json  trial_22_config.json  trial_23_config.json  trial_24_config.json  trial_25_config.json  trial_26_config.json  trial_27_config.json  trial_28_config.json  trial_29_config.json  trial_2_config.json  trial_30_config.json  trial_31_config.json  trial_32_config.json  trial_33_config.json  trial_34_config.json  trial_35_config.json  trial_36_config.json  trial_37_config.json  trial_38_config.json  trial_39_config.json  trial_3_config.json  trial_40_config.json  trial_41_config.json  trial_42_config.json  trial_43_config.json  trial_44_config.json  trial_45_config.json  trial_46_config.json  trial_47_config.json  trial_48_config.json  (+12 more)
results/: benchmark_summary.txt  edge_fine_log.txt  edge_optimization_log.txt  grid_size_experiment_summary.md  hyperparam_optimization_log.txt  k_optimization_log.txt  learning_append_output.txt  (+17 more)
tests/: AdapterTests.cpp  CMakeLists.txt  test_activity_monitor.cpp  test_assertions.cpp  test_binary_pattern.cpp  test_cluster.cpp  test_connectivity.cpp  test_datastore.cpp  test_hierarchical_structures.cpp  test_integration.cpp  test_main.cpp  test_model_importer.cpp  test_network_builder.cpp  test_network_inspector.cpp  test_network_validator.cpp  test_neural_components.cpp  test_neural_object_factory.cpp  test_neuron.cpp  test_performance_profiler.cpp  test_performance_regression.cpp  test_retrograde_stdp.cpp  test_spike_processor.cpp  test_spike_propagation.cpp  test_stress.cpp  test_threading.cpp
(+282 files in other folders)
